Fix padding on Ordered Lists
Allows ordered lists to support more than ten items, preventing
numbers from getting cut off. LP # 26317584

--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -65,7 +65,7 @@ ul, ol, dl {
 
 li {
 	margin-top: $sm-margin;
-	margin-left: $std-margin*1.5;
+	margin-left: $std-margin*2.5;
 	padding-left: $std-margin/2;
 }
 
